# sixpp

./: .gitignore  CMakeLists.txt  README.md  notes.md
cmake/: libsixel.cmake  protobuf.cmake
include/: .sixpp.h.swp  sixpp.h
proto/: pprof.pb-c.c  pprof.pb-c.h
src/: canvas.c  profile.c  sixpp.c  tree.c
test/: CMakeLists.txt  check_profile.c  check_tree.c
